created a header and added a dropdown menu

--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl"> 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ahond sadeghi</title>
+    <title>Diamond brush</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>sippin on this liquor</h1>
+    <div class="header">
+        <button class="homepage" href="#home">صفحه ی اصلی</button>
+        <div class="dropdown">
+            <button class="products" href="#products">محصولات</button>
+            <div class="dropdown-menu information-grid">
+                <div>
+                    <div class="dropdown-heading">مردانه</div>
+                    <div class="dropdown-links">
+                        <a href="#" class="circle">برس بیضی</a>
+                        <a href="#" class="square">برس مستطیل</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="dropdown-heading">زنانه</div>
+                    <div class="dropdown-links">
+                        <a href="#" class="circle">برس بیضی</a>
+                        <a href="#" class="square">برس مستطیل</a>
+                    </div>
+                </div>
+                <div>
+                    <div class="dropdown-heading">برس حمامی</div>
+                    <div class="dropdown-links">
+                        <a href="#" class="circle">برس حمامی بیضی</a>
+                        <a href="#" class="square">برس حمامی مستطیل</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
